Fixed alignment on landscape page

--- a/styles/index.css
+++ b/styles/index.css
@@ -142,28 +142,29 @@ body {
         position: absolute;
 
     }
+
     #name1 {
-        top: -6vh;
+        top: -9vh;
     }
 
     #name2 {
-        top: 16vh
+        top: 13vh
     }
 
     #name3 {
-        top: 38vh
+        top: 35vh
     }
 
     #name4 {
-        top: 60vh
+        top: 57vh
     }
 
     #name5 {
-        top: 82vh
+        top: 79vh
     }
 
     #name6 {
-        top: 104vh
+        top: 101vh
     }
 
     #tld {
@@ -173,7 +174,7 @@ body {
 
         position: fixed;
         top: 5vh;
-        left: 97.5vh;
+        left: 88.5vh;
 
         animation: tldColor 30s linear 2s infinite backwards;
     }
@@ -181,7 +182,7 @@ body {
     .scrolling-text {
         position: fixed;
         left: 5vw;
-        animation: scrollText 6s linear infinite;
+        animation: scrollText 3s linear infinite;
 
     }
 
@@ -194,18 +195,13 @@ body {
         }
     }
 
-    #triangleContainer {
-        height: 100vh;
-        width: 100vw;
-    }
-
     #msg {
         position: fixed;
         font-size: 2.5vh;
 
         color: black;
 
-        left: 110vh;
+        left: 99.5vh;
         top: 42vh;
     }
 
